@@ -48,7 +48,7 @@ class LSODAR(Explicit_ODE):
         
         .. math::
     
-            \dot{y} = f(t,y), \quad y(t_0) = y_0.
+            \\dot{y} = f(t,y), \\quad y(t_0) = y_0.
             
         LSODAR automatically switches between using an ADAMS method
         or an BDF method and is also able to monitor events.
